--- a/src/pages/css/Landing.css
+++ b/src/pages/css/Landing.css
@@ -25,7 +25,7 @@
     background-image: url('/src/image/background.png');
     background-size: cover;
     background-position: center;
-    filter: blur(0.75vw);
+    filter: blur(1vw);
     position: absolute;
     top: 0;
     left: 0;
@@ -110,9 +110,10 @@
 /* Navbar */
 .container-navbar {
     width: 100%;
-    height: 75px;
+    height: auto;
+    min-height: 75px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: fixed;
@@ -120,6 +121,7 @@
     top: 0px;
     left: 0px;
     z-index: 200;
+    padding: 15px 10px;
 }
 
 .content-navbar {
@@ -130,6 +132,12 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+}
+
+.content-navbar .btn {
+    display: none;
+    font-size: 35px;
+    cursor: pointer;
 }
 
 .content-navbar .logo {
@@ -151,6 +159,7 @@
     font-weight: 600;
     line-height: unset;
     letter-spacing: 0.1px;
+    color: var(--stoneEleven);
     margin: 0px 15px;
     cursor: pointer;
     transition: all .1s ease-in-out;
@@ -168,19 +177,108 @@
 }
 
 
+/* Navbar Mobile */
+.content-navbar-mobile {
+    width: 92.5%;
+}
+
+.content-navbar-mobile .links {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0px;
+    padding: 0px 10px;
+}
+
+.content-navbar-mobile .links a {
+    width: 100%;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: unset;
+    letter-spacing: 0.1px;
+    color: var(--stoneEleven);
+    margin: 7.5px 0px;
+    cursor: pointer;
+    transition: all .1s ease-in-out;
+} .content-navbar-mobile .links a:hover {
+    color: var(--one);
+    text-decoration: underline;
+} 
+
+.content-navbar-mobile .links .btn-primary {
+    width: 100%;
+    height: 50px;
+    margin: 10px 0px;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+
 /* Games */
 .container-games {
     width: 100%;
     height: auto;
     background: var(--three);
     background-image: linear-gradient(225deg, rgba(128, 0, 128, .15), rgba(128, 0, 128, 0)) !important;
-    margin: -20px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 10;
     padding: 75px 0px;
+    position: relative;
 }
+
+.container-games .fita {
+    width: 100%;          
+    height: 75px;
+    background: var(--two);
+    color: var(--stoneOne);
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    box-sizing: border-box;
+    position: absolute;
+    top: -75px;
+    left: 0px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.container-games .fita .content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    white-space: nowrap;
+    transition: all .1s ease-in-out;
+    animation: move 10s linear infinite;
+}
+
+.container-games .fita .content p {
+    font-size: 17px;
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+    text-transform: uppercase;
+}
+
+.container-games .fita .content .icon {
+    font-size: 20px;
+    margin: 0px 15px;
+}
+
+@keyframes move {
+    from {
+      transform: translateX(0%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+}
+
 
 .content-games {
     width: 92.5%;
@@ -191,7 +289,7 @@
     justify-content: space-between;
 }
 
-.content-games img {
+.content-games .img-jogos {
     width: 325px;
     height: max-content;
     margin: auto 0px;
@@ -313,9 +411,58 @@
     box-shadow: 0px 2.5px 12.5px var(--two);
 }
 
-
 .linha-rgb {
     width: 100%;
-    height: 2px;
+    height: 5px;
     background-image: linear-gradient(95.99deg,rgba(41,224,169,.7) 7.66%,rgba(95,117,242,.7) 41.15%,rgba(153,86,246,.7) 75.03%,rgba(226,84,255,.7) 98.16%);
+}
+
+
+
+
+@media (max-width: 1050px) {
+    .container-games {
+        padding: 100px 0px;
+    }
+
+    .content-games .games {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .content-games .img-jogos {
+        display: none;
+    }
+}
+
+@media (max-width: 650px) {
+    .content-landing::before {
+        filter: blur(1.5vw);
+    }
+    .content-landing .text h1 {
+        font-size: 32px;
+        max-width: 400px;
+        line-height: unset;
+    }
+    
+    .content-landing .text p {
+        font-size: 14px;
+        max-width: 400px;
+        line-height: unset;
+    }
+    
+    .content-landing .text button {
+        width: 70%;
+        height: 50px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 550px) {
+    .content-navbar .links {
+        display: none;
+    }
+    .container-navbar .btn {
+        display: block;
+    }
 }
