--- a/src/components/css/Popup.css
+++ b/src/components/css/Popup.css
@@ -107,6 +107,7 @@
     padding: 0px 15px 0px 45px;
     border-radius: 10px;
     font-size: 14px;
+    cursor: pointer;
     color: var(--stoneEleven);
 } .content-popup .form .input select:focus {
     border: 1px solid var(--stoneEleven);
