--- a/src/pages/css/Landing.css
+++ b/src/pages/css/Landing.css
@@ -49,7 +49,7 @@
     text-align: center;
     margin: 0px 0px 12px 0px;
 } .content-landing .text h1 strong {
-    color: var(--one);
+    color: var(--two);
     font-weight: 900;
 }
 
@@ -220,8 +220,10 @@
 .container-landing .container-games {
     width: 100%;
     height: auto;
+    /*
     background: var(--three);
     background-image: linear-gradient(225deg, rgba(128, 0, 128, .15), rgba(128, 0, 128, 0)) !important;
+    */
     margin: 0px 0px 0px 0px;
     display: flex;
     align-items: center;
@@ -313,7 +315,7 @@
     letter-spacing: 0.1px;
     margin: 0px 0px 10px 0px;
 } .container-landing .content-games .games h1 strong {
-    color: var(--one);
+    color: var(--two);
     font-weight: 800;
 }
 
@@ -424,7 +426,108 @@
 
 
 
+/* Ranking */
+.container-landing .container-ranking {
+    width: 100%;
+    height: auto;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    padding: 60px 0px 30px 0px;
+    position: relative;
+}
 
+.container-landing .content-ranking {
+    width: 92.5%;
+    max-width: 1111px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.container-landing .content-ranking h1 {
+    width: auto;
+    font-size: 30px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0.1px;
+    margin: 0px 0px 10px 0px;
+} .container-landing .content-ranking h1 strong {
+    color: var(--two);
+    font-weight: 800;
+}
+
+
+.container-landing .content-ranking p {
+    width: auto;
+    max-width: 500px;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 22px;
+    letter-spacing: 0.1px;
+    margin: 0px 0px 12px 0px;
+}
+
+
+/* Tabela */
+.container-landing .content-ranking .tabela {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid var(--two);
+    border-top: 10px solid var(--two);
+    margin: 25px 0px 50px 0px;
+}
+
+.container-landing .content-ranking .tabela .linha {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background: #160025;
+} .container-landing .content-ranking .tabela .linha:nth-child(odd) {
+    background: #1d0738;
+}
+
+.container-landing .content-ranking .tabela .linha .coluna {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding: 0px 5px;
+}
+
+.container-landing .content-ranking .tabela .linha .coluna p {
+    width: 100%;
+    font-size: 15px;
+    font-weight: 600;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+} .container-landing .content-ranking .tabela .linha.one .coluna p {
+    font-size: 15.5px;
+    text-transform: uppercase;
+}
+
+
+
+
+
+
+
+  
+  
+
+/* Mobile */
 @media (max-width: 1050px) {
     .container-landing .container-games {
         padding: 100px 0px;
@@ -463,7 +566,9 @@
     }
 }
 
-@media (max-width: 560px) {
+
+/* Navbar Mobile */
+@media (max-width: 700px) {
     .content-navbar .links {
         display: none;
     }
