--- a/src/pages/css/Landing.css
+++ b/src/pages/css/Landing.css
@@ -481,7 +481,7 @@
     align-items: center;
     border: 2px solid var(--two);
     border-top: 10px solid var(--two);
-    margin: 25px 0px 50px 0px;
+    margin: 25px 0px;
 }
 
 .container-landing .content-ranking .tabela .linha {
@@ -518,10 +518,40 @@
     text-transform: uppercase;
 }
 
+.container-landing .content-ranking .pagination {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 0px 25px 0px;
+}
 
+.container-landing .content-ranking .pagination p {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+}
 
-
-
+.container-landing .content-ranking .pagination button {
+    width: max-content;
+    height: auto;
+    padding: 12.5px 15px;
+    font-size: 14px;
+    font-weight: 600;
+    border: 2px solid var(--two);
+    color: var(--stoneEleven);
+    background: var(--one);
+    cursor: pointer;
+    transition: all .1s ease-in-out;
+} .container-landing .content-ranking .pagination button:hover,
+.container-landing .content-ranking .pagination button:focus {
+    background: transparent;
+    color: var(--two);
+    box-shadow: 0px 2.5px 12.5px var(--two);
+}
 
 
   
