--- a/src/components/css/Popup.css
+++ b/src/components/css/Popup.css
@@ -48,6 +48,7 @@
     font-size: 17.5px;
     font-weight: 600;
     letter-spacing: 0.2px;
+    line-height: 28px;
     margin: 0px 8px 0px 0px;
 } .content-popup .form .bar h1 strong {
     color: var(--two);
