--- a/src/pages/css/Landing.css
+++ b/src/pages/css/Landing.css
@@ -106,116 +106,6 @@
 
 
 
-
-/* Navbar */
-.container-navbar {
-    width: 100%;
-    height: auto;
-    min-height: 75px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    backdrop-filter: blur(12.5px);
-    top: 0px;
-    left: 0px;
-    z-index: 200;
-    padding: 15px 10px;
-}
-
-.content-navbar {
-    width: 92.5%;
-    max-width: 1111px;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.content-navbar .btn {
-    display: none;
-    font-size: 35px;
-    cursor: pointer;
-}
-
-.content-navbar .logo {
-    width: auto;
-    height: 50px;
-    cursor: pointer;
-}
-
-.content-navbar .links {
-    width: auto;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.content-navbar .links a {
-    font-size: 15.5px;
-    font-weight: 600;
-    line-height: unset;
-    letter-spacing: 0.1px;
-    color: var(--stoneEleven);
-    margin: 0px 15px;
-    cursor: pointer;
-    transition: all .1s ease-in-out;
-} .content-navbar .links a:hover {
-    color: var(--one);
-    text-decoration: underline;
-}
-
-.content-navbar .links .btn-primary {
-    width: max-content;
-    height: max-content;
-    font-size: 14.5px;
-    padding: 12px 16px;
-    margin: 0px 12px;
-}
-
-
-/* Navbar Mobile */
-.content-navbar-mobile {
-    width: 92.5%;
-}
-
-.content-navbar-mobile .links {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    margin: 10px 0px;
-    padding: 0px 10px;
-}
-
-.content-navbar-mobile .links a {
-    width: 100%;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: unset;
-    letter-spacing: 0.1px;
-    color: var(--stoneEleven);
-    margin: 7.5px 0px;
-    cursor: pointer;
-    transition: all .1s ease-in-out;
-} .content-navbar-mobile .links a:hover {
-    color: var(--one);
-    text-decoration: underline;
-} 
-
-.content-navbar-mobile .links .btn-primary {
-    width: 100%;
-    height: 50px;
-    margin: 10px 0px;
-    font-size: 14px;
-    font-weight: 600;
-}
-
-
-
 /* Games */
 .container-landing .container-games {
     width: 100%;
@@ -554,7 +444,102 @@
 }
 
 
-  
+/* Chaveamento */
+.container-landing .container-chaveamento {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px 0px 50px 0px;
+}
+
+.container-landing .content-chaveamento {
+    width: 100%;
+    max-width: 1111px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    margin: 50px 0px;
+}
+
+.container-landing .content-chaveamento .top {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 30px 0px;
+}
+
+.container-landing .content-chaveamento .top .grupo {
+    width: max-content;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 20px;
+}
+
+.container-landing .content-chaveamento .top .grupo.quartas {
+    margin: 35px 0px 0px 0px;
+}
+
+.container-landing .content-chaveamento .top .grupo.semi {
+    margin: 0px 0px 0px 0px;
+    transform: translateY(105px);
+}
+
+
+.container-landing .content-chaveamento .bottom {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 30px 0px;
+}
+
+.container-landing .content-chaveamento .bottom .grupo {
+    width: max-content;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 20px;
+}
+
+.container-landing .content-chaveamento .bottom .grupo.quartas {
+    margin: 35px 0px 0px 0px;
+}
+
+.container-landing .content-chaveamento .bottom .grupo.semi {
+    transform: translateY(-35px);
+    margin: 0px 0px 0px 0px;
+}
+
+.container-landing .content-chaveamento .turma {
+    width: 115px;
+    height: 50px;
+    background: var(--stoneEleven);
+    border-left: 5px solid var(--two);
+    margin: 15px 0px 0px 0px;
+    color: var(--four);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-landing .content-chaveamento .turma p {
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0px 2.5px 0px 0px;
+}
+
+.container-landing .content-chaveamento .top .grupo .turma {
+    margin: 0px 0px 15px 0px;
+}
   
 
 /* Mobile */
@@ -593,16 +578,5 @@
         width: 70%;
         height: 50px;
         font-size: 14px;
-    }
-}
-
-
-/* Navbar Mobile */
-@media (max-width: 700px) {
-    .content-navbar .links {
-        display: none;
-    }
-    .container-navbar .btn {
-        display: block;
     }
 }
