--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -38,7 +38,7 @@
 }
 
 .content-navbar .links {
-    width: auto;
+    width: max-content;
     height: auto;
     display: flex;
     flex-direction: row;
@@ -51,7 +51,7 @@
     line-height: unset;
     letter-spacing: 0.1px;
     color: var(--stoneEleven);
-    margin: 0px 15px;
+    margin: 0px 16px;
     cursor: pointer;
     transition: all .1s ease-in-out;
 } .content-navbar .links a:hover {
@@ -63,8 +63,26 @@
     width: max-content;
     height: max-content;
     font-size: 14.5px;
-    padding: 12px 16px;
-    margin: 0px 12px;
+    padding: 12.5px 18px;
+    margin: 0px 10px;
+}
+
+.links .btn-secondary {
+    width: max-content;
+    height: max-content;
+    font-size: 14.25px;
+    padding: 12.5px 16px 12.5px 14px;
+    margin: 0px 10px;
+    display: flex;
+    line-height: unset;
+    align-items: center;
+    justify-content: center;
+} .links .btn-secondary .icon {
+    margin: 0px 8px 1px 0px;
+    padding: 0px;
+    font-size: 17px;
+    height: auto;
+    width: auto;
 }
 
 
@@ -105,8 +123,19 @@
     font-weight: 600;
 }
 
+.content-navbar-mobile .links .btn-secondary {
+    width: 100%;
+    height: 50px;
+    margin: 10px 0px;
+    font-size: 15px;
+    font-weight: 600;
+} .content-navbar-mobile .links .btn-secondary .icon {
+    font-size: 20px;
+    margin: 0px 8px 0px 0px;
+}
+
 /* Navbar Mobile */
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     .content-navbar .links {
         display: none;
     }
