--- a/src/components/css/Popup.css
+++ b/src/components/css/Popup.css
@@ -137,6 +137,56 @@
     color: var(--stoneOne);
 }
 
+.content-popup .form .ou {
+    width: 99%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: var(--stoneEleven);
+    margin: 10px auto 20px auto;
+} .content-popup .form .ou div {
+    width: 100%;
+    border-radius: 8px;
+    border-top: 1px solid var(--stoneEleven);
+} .content-popup .form .ou p {
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 0px 12.5px;
+}
+
+
+.content-popup .form .google {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background: var(--stoneEleven);
+    border: 1px solid var(--stoneEleven);
+    margin: 0px 0px 20px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--stoneOne);
+    font-size: 14.5px;
+    font-weight: 500;
+    letter-spacing: 0.2px;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: all .1s ease-in-out;
+} .content-popup .form .google:hover,
+.content-popup .form .google:focus {
+    background: transparent;
+    border: 1px solid var(--stoneEleven);
+    box-shadow: 0px 2.5px 12.5px var(--stoneSix);
+    color: var(--stoneEleven);
+} .content-popup .form .google .icon {
+    font-size: 22px;
+    margin: 0px 8px 0px 0px;
+}
+
+
+
 
 /* Md Erro */
 .content-popup .form .erro {
