--- a/src/global.css
+++ b/src/global.css
@@ -149,6 +149,34 @@ h1, h2, h3, h4, h5, h6, a, p, strong, span, label, input, textarea {
   cursor: text;
 }
 
+/* Scroll Bar */
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+/* Para Firefox */
+* {
+  scrollbar-color: transparent transparent;
+}
+
+*::-moz-scrollbar {
+  width: 12px;
+}
+
+*::-moz-scrollbar-thumb {
+  background-color: transparent;
+}
+
+#webpack-dev-server-client-overlay-div, #webpack-dev-server-client-overlay {
+  /*display: none !important;*/
+  color: #fff;
+}
+
 
 /* ALERTA MODIFICADO */
 .swal-modal {
