--- a/src/pages/css/Landing.css
+++ b/src/pages/css/Landing.css
@@ -119,7 +119,7 @@
     align-items: center;
     justify-content: center;
     z-index: 10;
-    padding: 75px 0px;
+    padding: 75px 0px 50px 0px;
     position: relative;
 }
 
@@ -370,7 +370,9 @@
     flex-direction: column;
     align-items: center;
     border: 2px solid var(--two);
+    border-radius: 12px;
     border-top: 10px solid var(--two);
+    overflow: hidden;
     margin: 25px 0px;
 }
 
@@ -436,6 +438,7 @@
     border: 2px solid var(--two);
     color: var(--stoneEleven);
     background: var(--one);
+    border-radius: 14px;
     cursor: pointer;
     transition: all .1s ease-in-out;
 } .container-landing .content-ranking .pagination button:hover,
@@ -454,7 +457,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 25px 0px 50px 0px;
+    padding: 0px;
 }
 
 .container-landing .content-chaveamento {
@@ -493,7 +496,7 @@
 .container-landing .content-chaveamento .chaves {
     width: 100%;
     height: auto;
-    margin: 25px 0px;
+    margin: 25px 0px 75px 0px;
     overflow-x: scroll;
 }
 
@@ -552,12 +555,13 @@
 }
 
 .container-landing .content-chaveamento .turma {
-    width: max-content;
+    width: 110px;
     height: 50px;
     background: var(--stoneEleven);
     border-left: 5px solid var(--two);
     margin: 15px 0px 0px 0px;
     padding: 0px 12.5px;
+    border-radius: 4px;
     color: var(--four);
     display: flex;
     align-items: center;
