--- a/src/components/css/Popup.css
+++ b/src/components/css/Popup.css
@@ -20,6 +20,7 @@
     position: relative;
     border-radius: 12px;
     overflow: hidden;
+    overflow-y: scroll;
     border: 3px solid transparent;
     background: linear-gradient(95.99deg, rgba(41,224,169,.7) 7.66%, rgba(95,117,242,.7) 41.15%, rgba(153,86,246,.7) 75.03%, rgba(226,84,255,.7) 98.16%);
     z-index: 1;
@@ -239,4 +240,93 @@
 
 .content-popup .form .success p {
     font-size: 15px;
+}
+
+
+
+
+
+/* Pupup Alert */
+.content-popup .alert {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    background: var(--three);
+    overflow-y: scroll;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-popup .alert .bar {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 0px 25px 0px;
+}
+
+.content-popup .alert .bar h1 {
+    font-size: 17.5px;
+    font-weight: 600;
+    letter-spacing: 0.2px;
+    line-height: 28px;
+    margin: 0px 8px 0px 0px;
+} .content-popup .alert .bar h1 strong {
+    color: var(--two);
+    font-weight: 700;
+}
+
+.content-popup .alert .bar .icon {
+    min-width: 28px;
+    min-height: 28px;
+    font-size: 28px;
+    padding: 4px;
+    background: var(--one);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .1s ease-in-out;
+} .content-popup .alert .bar .icon:hover {
+    background: var(--two);
+    color: var(--stoneOne);
+}
+
+.content-popup .alert h1 {
+    font-size: 22px;
+    font-weight: 800;
+    margin: 0px 0px 10px 0px;
+} .content-popup .alert h2 strong {
+    color: var(--two);
+    font-weight: 800;
+}
+
+.content-popup .alert h2 {
+    font-size: 20px;
+    font-weight: 700;
+    margin: 2.5px 0px 12.5px 0px;
+} .content-popup .alert h2 strong {
+    color: var(--two);
+    font-weight: 700;
+}
+
+.content-popup .alert p {
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.25px;
+    line-height: 25px;
+    margin: 0px 0px 20px 0px;
+} .content-popup .alert p strong {
+    color: var(--two);
+    font-weight: 700;
+}
+
+.content-popup .alert a {
+    width: 100%;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.3;
+    margin: 12.5px 0px 6.25px auto;
+    text-align: end;
 }
