--- a/src/global.css
+++ b/src/global.css
@@ -75,7 +75,7 @@
 
 :root {
   --one: #5b3b91;
-  --two: #a97ef3;
+  --two: rgb(169, 126, 243);
   --three: #0d001d;
   --four: #1a0830;
   
@@ -104,7 +104,10 @@
   --firebase: #f5820d;
 
   --nunito: "Nunito", sans-serif;
- 
+
+  --backgroundOne: linear-gradient(225deg, rgba(128, 0, 128, .2), rgba(128, 0, 128, 0)) !important;
+  --backgroundTwo: linear-gradient(225deg, rgba(169, 126, 243, .2), rgb(169, 126, 243, 0.05)) !important;
+
   --boxShadow: 0 1px 2px 0 rgba(0,0,0,.12);
   --boxShadowGray: 0 1px 0 0 rgba(0,4,17,.07),0 0 24px 0 rgba(0,4,17,.15);
 }
