--- a/src/pages/css/Regras.css
+++ b/src/pages/css/Regras.css
@@ -279,5 +279,22 @@
         font-size: 15.5px;
         line-height: 28px;
     }
+
+
+    .container-regras .content-games .games {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container-regras .content-games .games h1.erro {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        font-size: 22px;
+        line-height: 32px;
+    }
     
 }
